objects/Store__c.object
<CustomObject>
    <fields>
        <fullName>HasValidZipCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasValidZipCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueID__c</fullName>
        <description>Feed Outbound - Issue ID</description>
        <formula>Issue__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - Date format.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Address1__c</fullName>
        <label>Store Address1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Address2__c</fullName>
        <label>Store Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_City__c</fullName>
        <label>Store City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Comment__c</fullName>
        <label>Store Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_Name__c</fullName>
        <label>Store Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_State__c</fullName>
        <label>Store State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Type_Text__c</fullName>
        <formula>Store_Type__r.Display_Description__c</formula>
        <label>Store Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Store Type</label>
        <referenceTo>Store_Type__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_Zip4__c</fullName>
        <description>Feed Outbound - HardCode value &apos;&apos;</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Zip4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Zip__c</fullName>
        <label>Store Zip</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransacationID__c</fullName>
        <description>Feed Outbound - Transacation ID</description>
        <formula>Issue__r.Transacation_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transacation ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Management</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checking if the record is ready to send in feed.</description>
        <label>isReviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Store</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Store Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Store_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Issue__r.Issue_Type__c  = &apos;Complaints&apos;  &amp;&amp; ISBLANK(  Store_Name__c ),  true , false)</errorConditionFormula>
        <errorMessage>Store Name should not be blank.</errorMessage>
    </validationRules>
</CustomObject>